addons/ingress/nginx/k8dash-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-k8dash
  namespace: kubernetes-k8dash
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /kubernetes-dashboard(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: kubernetes-k8dash
            port:
              number: 80
